<resources>
    <string name="app_name">Proyecto1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_menuPrincipal">Menu Principal</string>
    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_sonidos">Sonidos</string>
    <string name="menu_sitioweb">Sitio Web</string>
    <string name="menu_abriraplicaciones"> Aplicaciones</string>
    <string name="menu_maravillasmodernas">Filantropos</string>
    <string name="menu_visualizador3d">GoogleMaps</string>
</resources>