<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menuPrincipal"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_menuPrincipal" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_calculadora_24"
            android:title="@string/menu_calculadora" />
        <item
            android:id="@+id/nav_sonidos"
            android:icon="@drawable/ic_sonidos_24"
            android:title="@string/menu_sonidos" />
        <item
            android:id="@+id/nav_sitioweb"
            android:icon="@drawable/ic_baseline_web_asset_24"
            android:title="@string/menu_sitioweb" />
        <item
            android:id="@+id/nav_abriraplicaciones"
            android:icon="@drawable/ic_baseline_android_24"
            android:title="@string/menu_abriraplicaciones" />
        <item
            android:id="@+id/nav_maravillasmodernas"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_maravillasmodernas" />
        <item
            android:id="@+id/nav_visualizador3d"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_visualizador3d" />
    </group>
</menu>